css/styles.css
/* ... */
.button-link__container {
  z-index: 1;
  padding-top: .75rem;
  padding-bottom: .75rem;
  position: relative;
  overflow: clip;
}

.button-link__container.is-sneaky-sprocket {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  overflow: visible;
}

.special-text {
  color: var(--color-primary);
  text-align: center;
  display: inline-block;
}

.hero-text {
  font-size: 64px;
  line-height: 64px;
}

.hero-text.hero-bottom-line {
  text-align: left;
}

.hero-container {
  z-index: 1;
  padding-right: var(--_spacing---container-padding\<deleted\|variable-bf23a90b-fce9-d8b9-e3f0-e0763b085c69\>);
  padding-left: var(--_spacing---container-padding\<deleted\|variable-bf23a90b-fce9-d8b9-e3f0-e0763b085c69\>);
  width: 100%;
  max-width: none;
  position: relative;
}

.hero {
  padding-top: 10em;
  padding-bottom: var(--_spacing---container-padding\<deleted\|variable-bf23a90b-fce9-d8b9-e3f0-e0763b085c69\>);
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-end;
  width: 100%;
  min-height: 100vh;
  display: flex;
}

.hero-inner {
  grid-column-gap: 8vw;
  grid-row-gap: 8vw;
  grid-template: "."
    / .5fr 2fr;
  grid-auto-columns: 1fr;
  place-content: stretch space-between;
  justify-items: stretch;
  width: 100%;
  max-width: 1280px;
  min-height: 59vh;
  margin-right: auto;
  display: grid;
}

.code-embed-css {
  pointer-events: none;
  font-size: var(--size-font);
  width: 0;
  height: 0;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

.container-2 {
  z-index: 1;
  max-width: var(--size-container);
  padding-left: var(--container-padding);
  padding-right: var(--container-padding);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.container-2.is--medium {
  max-width: calc(var(--size-container) * .85);
}

.button-default__text-3 {
  padding-top: 2px;
  font-size: 1.25em;
  font-weight: 700;
  display: block;
}

.styleguide__list {
  grid-column-gap: 2em;
  grid-row-gap: 2em;
  flex-flow: column;
  width: 100%;
  display: flex;
  position: relative;
}

.styleguide {
  padding-bottom: calc(var(--footer-height) + var(--section-padding));
  padding-top: calc(var(--header-height) + var(--section-padding));
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

.retro-type {
  text-transform: uppercase;
  font-family: "Offbit 101", Arial, sans-serif;
  font-weight: 700;
}

.retro-type.dim-text {
  color: #fff9;
}

.retro-type.dim-text.project-section-title {
  opacity: .47;
  color: var(--color-light);
  width: 100%;
}

.retro-type.about-me-title {
  opacity: 1;
  color: #ffffff73;
}

.retro-type.about-me-title.dark-type {
  color: var(--color-dark);
  white-space: nowrap;
  align-self: flex-end;
  width: .75em;
  height: 1em;
  display: block;
  transform: rotate(-90deg);
}

.button-primary-2 {
  z-index: 1;
  color: #000;
  text-transform: uppercase;
  -webkit-user-select: none;
  user-select: none;
  place-content: center;
  padding: .75rem;
  text-decoration: none;
  display: flex;
  position: relative;
}

.button-primary-2.is-bazzle-snap {
  padding: 1em 2em;
}

.line {
  background-color: var(--color-neutral-600);
  width: 100%;
  height: 1px;
  position: static;
}

.btn-wrap {
  grid-column-gap: var(--gap);
  grid-row-gap: var(--gap);
  flex-wrap: wrap;
  align-items: flex-start;
  display: flex;
  position: relative;
}

.body-2 {
  background-color: var(--color-black\<deleted\|variable-adb418d3-72d5-dffa-50e1-6be75670a8e1\>);
}

.heading-3 {
  font-family: Instrument Sans, Arial, sans-serif;
  font-weight: 500;
}

.heading-4 {
  margin-top: 0;
}

.logo {
  width: 1.75em;
  height: 1.75em;
}

.logo.back {
  display: none;
}

.scramble-section {
  grid-column-gap: 2em;
  grid-row-gap: 2em;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 100vh;
  display: flex;
}

.scramble-section.u--bg-light {
  background-color: #efeeec;
}

.scramble-heading {
  text-align: center;
  letter-spacing: -.03em;
  text-transform: uppercase;
  max-width: 12em;
  margin: 0 auto;
  font-size: 3em;
  font-weight: 400;
  line-height: .9;
}

.scramble-button {
  color: #131313;
  text-transform: uppercase;
  border: 1px dotted #000;
  border-radius: .3125em;
  padding: .5em 1em;
  font-size: 1em;
  font-weight: 400;
  text-decoration: none;
}

.scramble-button-text {
  margin-bottom: 0;
}

.scramble-text-effect {
  display: none;
}

.project-title {
  letter-spacing: -.03em;
  white-space: nowrap;
  font-size: 1em;
  font-weight: 500;
  line-height: 1;
}

.main-img__item {
  z-index: 1;
  width: 100%;
  height: 100%;
  position: absolute;
}

.paragraph {
  margin-bottom: 0;
  font-size: 1.1em;
  line-height: 1.15;
}

.paragraph.section-1 {
  max-width: none;
}

.paragraph.section-2 {
  padding-left: 4em
}

.paragraph.section-3 {
  width: 100%;
  max-width: 50em;
}

.paragraph.sm {
  font-size: 1em;
  line-height: 1.1;
}

.paragraph.sm.dark-type {
  color: var(--color-dark);
}

.project-hero-image {
  aspect-ratio: auto 2684 / 1510;
  object-fit: cover;
  border-radius: 2px;
  width: 100%;
  max-width: 100%;
  height: auto;
  transform: translate(0);
}

.project-hero-image.section-1 {
  aspect-ratio: auto 2684 / 1510;
  width: 100%;
  max-width: 100%;
  height: auto;
}

.main-img__list {
  width: 16em;
  height: 22em;
  position: relative;
}

.overlay-title__wrap {
  flex-flow: column;
  justify-content: center;
  width: 100%;
  height: 4.6em;
  display: flex;
  position: relative;
}

.overlay-hero {
  grid-column-gap: 1.75em;
  grid-row-gap: .875em;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 1.75em;
  display: flex;
}

.hero-overview {
  display: flex;
  column-gap: 2px;
  row-gap: 2px;
  flex-direction: row;
  flex-wrap: wrap;
  align-self: flex-start;
  margin-bottom: 1.75em;
}
/* ... */

